--- a/footer.html
+++ b/footer.html
@@ -17,7 +17,7 @@
       </ul>
     </div>
     <div class="footer-col">
-      <h4>Services</h4>
+      <h4>SERVICES</h4>
       <ul>
         <li><a href="https://www.isavesit.org.in/3D-printer/">3D Printer</a></li>
         <li><a href="https://drive.google.com/folderview?id=1rc4JpFtKFXwpxtZIzUMwQFuvbfk-AVz8">Digital Library</a></li>
